--- a/index.html
+++ b/index.html
@@ -10,21 +10,22 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-<!--Google Fonts--->
+  <!--Google Fonts--->
 
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,400;1,300&display=swap" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Cookie&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,100&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,400;1,300&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Cookie&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,100&display=swap" rel="stylesheet">
 
-<!--Fonts end---->
+  <!--Fonts end---->
 
 </head>
 
@@ -40,47 +41,49 @@
   </div>
 
   <div class="middle-container">
-  <div class="profile">
-    <img class="profile-picture" src="images/man.png" alt="profile-picture">
-    <h2>Hello World.</h2>
-    <p>I'm a web designer & developer, I do front-end & back-end web development to provide the best out of both world of UI/UX & functionality.  </p>
-  </div>
-  <hr>
-  <div class="skills">
-    <h2>My Skills.</h2>
-    <div class="skill-row">
-      <img class="ux" src="images/ux.png" alt="design">
-      <div class="skill-text">
-        <h3>Lorem & Ipsum</h3>
-        <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
-      </div>
-
+    <div class="profile">
+      <img class="profile-picture" src="images/man.png" alt="profile-picture">
+      <h2>Hello World.</h2>
+      <p>I'm a web designer & developer, I do front-end & back-end web development to provide the best out of both world of UI/UX & functionality. </p>
     </div>
-    <div class="skill-row">
-      <img class="social-media" src="images/social-media.png" alt="marketing">
-      <div class="skill-text">
-        <h3>Lorem & Ipsum</h3>
-        <p class="kokoi">Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
+    <hr>
+    <div class="skills">
+      <h2>My Skills.</h2>
+      <div class="skill-row">
+        <img class="ux" src="images/ux.png" alt="design">
+        <div class="skill-text">
+          <h3 style="font-size:40px;">Web Design & Development.</h3>
+          <p class="skill-description1">I spent my time in delivering the best user interface and user experience for my clients, with the functionalities that makes the website to whole a level.</p>
+        </div>
+
+      </div>
+      <div class="skill-row">
+        <img class="social-media" src="images/social-media.png" alt="marketing">
+        <div class="skill-text">
+          <h3 class="skill-title2">Digital Marketing.</h3>
+          <p class="skill-description2">I provide digital marketing services to boost the revenue of your business with SEO (Search Engine Optimization), email marketing and social media marketing.</p>
+        </div>
       </div>
     </div>
+    <hr>
+    <div class="contact-me">
+      <h2>Get In Touch</h2>
+      <h3>Contact me if you have any projects that can we could work with!</h3>
+      <p class="space">A programmer that you need</p>
+      <a class="btn" href="mailto:sesh2001@gmail.com">CONTACT ME</a>
+    </div>
   </div>
-  <hr>
-  <div class="contact-me">
-    <h2>Get In Touch</h2>
-    <h3>Lorem ipsum dolor sit amet, non elit.</h3>
-    <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
-    <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
-  </div>
-</div>
 
 
-<div class="bottom-container">
-  <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
-  <a class="footer-link" href="https://twitter.com/">Twitter</a>
-  <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
-  <p>© 2018 Name Surname.</p>
-</div>
+  <div class="bottom-container">
+    <a href="#" class="fa fa-facebook"></a>
+    <a href="#" class="fa fa-instagram"></a>
+    <a href="#" class="fa fa-github"></a>
+
+    <p class="copyright">© 2021 Seshwinraj.</p>
+  </div>
 
 
 </body>
+
 </html>
